--- a/test/Makefile
+++ b/test/Makefile
@@ -4,22 +4,24 @@ LLVMS       = $(patsubst %.cpp,%.llvm,$(CPPS))
 DOTS_RAW    = $(patsubst %.cpp,%.llvm.callgraph.dot,$(CPPS))
 DOTS        = $(patsubst %.cpp,%.dot,$(CPPS))
 PNGS        = $(patsubst %.cpp,%.png,$(CPPS))
+PDFS        = $(patsubst %.cpp,%.pdf,$(CPPS))
 
-all: $(PNGS)
+all: $(DOTS) $(PDFS)
 
 clean:
-	rm -f $(LLVMS) $(DOTS_RAW) $(DOTS) $(PNGS)
+	rm -f $(DOTS) $(PDFS)
 
-%.llvm: %.cpp
+%.llvm: %.cpp                           # generate a llvm from a source file
 	clang++ -S -emit-llvm $< -o $@
 
-%.llvm.callgraph.dot: %.llvm
+%.llvm.callgraph.dot: %.llvm            # generate a raw-dot file from a llvm
 	opt $< -enable-new-pm=0 -analyze -dot-callgraph
 
-%.dot: %.llvm.callgraph.dot
+%.dot: %.llvm.callgraph.dot             # demangle names in raw-dot file to dot file
 	cat $< | c++filt > $@
 
-%.png:	%.dot
+%.png:	%.dot                           # generate a png from a dot file
 	cat $< | dot -Tpng -o $@
 
-
+%.pdf:	%.dot                           # generate a pdf from a dot file
+	cat $< | dot -Tpdf -o $@
